# Prototype-AnitoVoyagAR

./: README.md  settings.gradle.kts
app/: AndroidManifest.xml  CMakeLists.txt  build.gradle.kts  errors.txt  version.h.in
app/CMake/: android.cmake  properties.cmake
app/jni/: CMakeLists.txt
app/jni [main]/: CMakeLists.txt
app/jni [main]/Anito-VoyagAR/: CMakeLists.txt
app/jni [main]/Anito-VoyagAR/src/: main.cpp
app/jni/Anito-VoyagAR/: CMakeLists.txt
app/jni/Anito-VoyagAR/include/: main.hpp
app/jni/Anito-VoyagAR/src/: main.cpp
app/jni/OpenXR/: CMakeLists.txt
app/jni/OpenXR/include/: OpenXRFramework.hpp  OpenXRUtils.hpp  TempGraphicsPlugin.hpp  VulkanGraphicsPlugin.hpp  VulkanSwapchainContext.hpp  openxr-framework.hpp  openxr-include.hpp
app/jni/OpenXR/include/Platform/: platform.hpp
app/jni/OpenXR/include/lib/: GraphicsPlugin.hpp  MathUtils.h  OpenXRInclude.hpp
app/jni/OpenXR/src/: OpenXRFramework.cpp  OpenXRUtils.cpp  TempGraphicsPlugin.cpp  VulkanGraphicsPlugin.cpp  VulkanSwapchainContext.cpp  openxr-framework.cpp  openxr_program.cpp  openxr_utils.cpp
app/jni/OpenXR/src/Platform/: platform_android.cpp
app/jni/Vulkan/: CMakeLists.txt
app/jni/Vulkan/include/: ARBackgroundPipeline.hpp  ARCameraTextureManager.hpp  ARDepthTextureManager.hpp  AROcclusionPipeline.hpp  ARTrackingManager.hpp  VertexBufferLayout.hpp  VulkanBuffer.hpp  VulkanRenderingContext.hpp  VulkanRenderingPipeline.hpp  VulkanShader.hpp  vertex_buffer_layout.hpp  vulkan_buffer.hpp  vulkan_rendering_context.hpp  vulkan_rendering_pipeline.hpp  vulkan_shader.hpp  vulkan_utils.hpp
app/jni/Vulkan/include/AR/: ARBackgroundPipeline.hpp  ARCameraTextureManager.hpp  ARDepthTextureManager.hpp  AROcclusionPipeline.hpp  ARTrackingManager.hpp
app/jni/Vulkan/include/export/: vulkan_wrapper_export.h
app/jni/Vulkan/include/lib/: RenderingPipelineConfig.hpp  VulkanUtils.hpp
app/jni/Vulkan/include/shaders/: CMakeLists.txt
app/jni/Vulkan/src/: ARBackgroundPipeline.cpp  ARCameraTextureManager.cpp  ARDepthTextureManager.cpp  AROcclusionPipeline.cpp  ARTrackingManager.cpp  VulkanBuffer.cpp  VulkanBufferLayout.cpp  VulkanRenderingContext.cpp  VulkanRenderingPipeline.cpp  VulkanShader.cpp  vulkan_buffer.cpp  vulkan_buffer_layout.cpp  vulkan_rendering_context.cpp  vulkan_rendering_pipeline.cpp  vulkan_shader.cpp  vulkan_utils.cpp
app/jni/Vulkan/src/AR/: ARBackgroundPipeline.cpp  ARCameraTextureManager.cpp  ARDepthTextureManager.cpp  AROcclusionPipeline.cpp  ARTrackingManager.cpp
app/jni/Vulkan/src/lib/: DataType.cpp  VulkanUtils.cpp
app/src/androidTest/java/com/example/prototype_anitovoyagar/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/prototype_anitovoyagar/: MainActivity.kt
app/src/main/java/org/dlsugamelab/AnitoVoyagARMobile/: ARCoreHelper.java  VoyagARMainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/prototype_anitovoyagar/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
